5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1758_672.log
== TEST (2019-05-23 10:13:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v = ones(dtype=int(n: ))
print(v)
-- ERROR:
File "XXXX", line 3
    v = ones(dtype=int(n: ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(dtype=int(n: ))
print(v)
-- ERROR:
File "XXXX", line 4
    v = ones(dtype=int(n: ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(dtype=int
print(v)
-- ERROR:
File "XXXX", line 5
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(dtype=int

print(v)
-- ERROR:
File "XXXX", line 6
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(n, dtype=int

print(v)
-- ERROR:
File "XXXX", line 6
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(n, dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:15:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("n: " ))
v = ones(n, dtype=int)

print(v)
-- EXECUTION TIME:
0.477037
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
